--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,10 @@
 </head>
 
 <body>
-    <h1>webpack</h1>
+    <h1>index</h1>
     <img src="<%= require('./a.png') %>" />
-</body> 
+</body>
+<script src="./js/base.js"></script>
 <% if(htmlWebpackPlugin.options.config.header) { %>
 <script src="//common/header.min.js" type="text/javascript"></script> 
 <% } %>
